// Code generated by mojo. DO NOT EDIT.

syntax = "proto3";

package mojo.geom;

option go_package = "github.com/mojo-lang/geom/go/pkg/mojo/geom;geom";
option java_multiple_files = true;
option java_outer_classname = "LngLatProto";
option java_package = "org.mojolang.mojo.geom";

message LngLat {
    double longitude = 1;
    double latitude = 2;
    double altitude = 3;
}